k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kristianwindsor
  labels:
    app: kristianwindsor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kristianwindsor
  template:
    metadata:
      labels:
        app: kristianwindsor
    spec:
      containers:
        - name: kristianwindsor
          image: kristianwindsor/kristianwindsor.com
          ports:
            - containerPort: 80
