k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kristianwindsor
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: kristianwindsor.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kristianwindsor
            port:
              number: 80
  - host: wnd.sr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kristianwindsor
            port:
              number: 80
  tls:
  - hosts:
    - kristianwindsor.com
    secretName: kristianwindsor-cert
  - hosts:
    - wnd.sr
    secretName: wndsr-cert
